fix(Chat): Removed scrollbar

--- a/src/style/chat.less
+++ b/src/style/chat.less
@@ -27,6 +27,7 @@
 
       .simplebar-content {
         padding: 25px;
+        overflow: hidden;
       }
 
       .message {
